--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title></title>
+    <link rel="stylesheet" href="/css/style.css">
+  </head>
+  <body></body>
+</html>
 <h1>Hello World!</h1>
 <a href="inner.html">go go GO</a>
