--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <title></title>
     <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body></body>
+</head>
+<body>
+  <section class="main">
+    <div class="center">
+      <h1>Олег Репин</h1>
+      <span>UI-дизайнер</span>
+    </div>
+  </section>
+</body>
 </html>
-<h1>Hello World!</h1>
-<a href="inner.html">go go GO</a>
