--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 <body>
   <section class="main">
     <div class="center">
-      <h1>Олег Репин</h1>
-      <span>UI-дизайнер</span>
+      <h1>Лицей для малышей</h1>
     </div>
   </section>
 </body>
