--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <section class="main">
     <div class="center">
       <h1>Лицей для малышей</h1>
+      <h1>Лицей для малышей</h1>
     </div>
   </section>
 </body>
