--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title></title>
     <link rel="stylesheet" href="css/style.css">
+    <meta http-equiv="refresh" content="0;URL='http://xn--80ahcclhdjebj9i7a4b6c.xn--p1ai/'" />
 </head>
 <body>
   <section class="main">
