--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Redirecting...</title>
+    <link rel="canonical" href="http://xn--80ahcclhdjebj9i7a4b6c.xn--p1ai/"/>
     <meta http-equiv="refresh" content="0;URL='http://xn--80ahcclhdjebj9i7a4b6c.xn--p1ai/'" />
 </head>
 <body>
-  <section class="main">
-    <div class="center">
-      <h1>Лицей для малышей</h1>
-      <h2>Лицей для малышей</h2>
-    </div>
-  </section>
+      <h1>Redirecting...</h1>
+      <a href="http://xn--80ahcclhdjebj9i7a4b6c.xn--p1ai/">Click here if you are not redirected.<a>
+      <script>location='http://xn--80ahcclhdjebj9i7a4b6c.xn--p1ai/'</script>
 </body>
 </html>
