--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta http-equiv="refresh" content="0;URL='http://xn--80ahcclhdjebj9i7a4b6c.xn--p1ai/'" />
 </head>
 <body>
-      <h1>Redirecting...</h1>
-      <a href="http://xn--80ahcclhdjebj9i7a4b6c.xn--p1ai/">Click here if you are not redirected.<a>
-      <script>location='http://xn--80ahcclhdjebj9i7a4b6c.xn--p1ai/'</script>
+  <div style="margin: 0 Auto; text-align: center; font-weight: normal; font-family: Arial;">
+      <h1 style="font-size: 40px; ">Перенаправление...</h1>
+      <a style=" font-size: 24px;  color:#30abdb; text-decoration:none;" href="http://xn--80ahcclhdjebj9i7a4b6c.xn--p1ai/">Нажмите сюда, есл вы не перенаправились автоматически</a>
+      <script>location="http://xn--80ahcclhdjebj9i7a4b6c.xn--p1ai/"</script>
+    </div>
 </body>
 </html>
