--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
     <title>Redirecting...</title>
-    <link rel="canonical" href="http://xn--80ahcclhdjebj9i7a4b6c.xn--p1ai/"/>
-    <meta http-equiv="refresh" content="1;URL='http://xn--80ahcclhdjebj9i7a4b6c.xn--p1ai/'" />
+    <link rel="canonical" href="http://liceykids.ru/"/>
+    <meta http-equiv="refresh" content="1;URL='http://liceykids.ru/'" />
 </head>
 <body>
   <div style="margin: 0 Auto; text-align: center; font-weight: normal; font-family: Arial;">
       <h1 style="font-size: 40px; ">Перенаправление...</h1>
-      <a style=" font-size: 24px;  color:#30abdb; text-decoration:none;" href="http://xn--80ahcclhdjebj9i7a4b6c.xn--p1ai/">Нажмите сюда, есл вы не перенаправились автоматически</a>
-      <script>location="http://xn--80ahcclhdjebj9i7a4b6c.xn--p1ai/"</script>
+      <a style=" font-size: 24px;  color:#30abdb; text-decoration:none;" href="http://liceykids.ru/">Нажмите сюда, есл вы не перенаправились автоматически</a>
+      <script>location="http://liceykids.ru/"</script>
     </div>
 </body>
 </html>
