--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <div style="margin: 0 Auto; text-align: center; font-weight: normal; font-family: Arial;">
       <h1 style="font-size: 40px; ">Перенаправление...</h1>
-      <a style=" font-size: 24px;  color:#30abdb; text-decoration:none;" href="http://liceykids.ru/">Нажмите сюда, есл вы не перенаправились автоматически</a>
+      <a style=" font-size: 24px;  color:#30abdb; text-decoration:none;" href="http://liceykids.ru/">Нажмите сюда, если вы не перенаправились автоматически</a>
       <script>location="http://liceykids.ru/"</script>
     </div>
 </body>
